version/0.2/_sources/examples/gallery_examples/misc/example_template.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/misc/example_template.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_gallery_examples_misc_example_template.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_misc_example_template.py:


.. _ref_how_to_add_an_example_reference_key:

Adding a New Gallery Example
----------------------------
This example demonstrates how to add new examples as well as being a template that can
be used in their creation.

This block comment should be included at the top of any new example. Each example
should have a reference tag/key in the form:

``.. _ref_my_example:``

The ``.. _ref_`` is necessary. Everything that follows is your reference tag. As
convention, we keep all references all in ``snake_case``.

This section should give a brief overview of what the example is about and/or demonstrates.
The title should be changed to reflect the topic your example covers.

New examples should be added as python scripts to:

``pyprimemesh/examples/gallery``

.. note::
   Avoid creating new folders unless absolutely necessary. If in doubt put the example
   in the folder closest to what it is doing and its precise location can be advised
   on in the pull request. If you *must* create a new folder, make sure to add a
   ``README.txt`` containing a reference, a title and a single sentence description of the folder.
   Otherwise the new folder will be ignored by Sphinx.

Example file names should be in the format:

``example_name.py``

After this preamble is complete, the first code block begins.

.. GENERATED FROM PYTHON SOURCE LINES 37-51

.. code-block:: default


    import ansys.meshing.prime as prime
    from ansys.meshing.prime.graphics import Graphics

    # start Ansys Prime Server and get client model
    prime_client = prime.launch_prime()
    model = prime_client.model

    # Your code goes here...
    mesh_util = prime.lucid.Mesh(model=model)
    example_file = prime.examples.download_elbow_fmd()
    mesh_util.read(example_file)
    print(model)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Part Summary:

    Part Name: flow_volume
    Part ID: 2
        13 Topo Edges
        9 Topo Faces
        1 Topo Volumes

        0 Edge Zones
            Edge Zone Name(s) : []
        0 Face Zones
            Face Zone Name(s) : []
        1 Volume Zones
            Volume Zone Name(s) : [volume]

        2 Label(s)
            Names: [inlet, outlet]

        Bounding box (-203.2 -228.6 -50.8)
                     (203.2 203.2 50.8)





.. GENERATED FROM PYTHON SOURCE LINES 52-65

Section Title
~~~~~~~~~~~~~
Code blocks can be broken up with text "sections" which are interpreted as
restructured text.

This will also be translated into a markdown cell in the generated jupyter notebook.
Sections can contain any information you may have regarding the example
such as step-by-step comments or notes regarding motivations etc.

As in jupyter notebooks, if code is left unassigned at the end of a code block
(as with ``model`` in the previous block) the output will be generated and
printed to the screen according to its ``__repr__``.  Otherwise, you can use
``print()`` to output the ``__str__``.

.. GENERATED FROM PYTHON SOURCE LINES 65-74

.. code-block:: default


    # more code...
    mesh_util.surface_mesh(min_size=5, max_size=20)
    mesh_util.volume_mesh(
        volume_fill_type=prime.VolumeFillType.POLY,
        prism_surface_expression="* !inlet !outlet",
        prism_layers=3,
    )








.. GENERATED FROM PYTHON SOURCE LINES 75-79

Rendering graphics
~~~~~~~~~~~~~~~~~~
If you display graphics the result will be auto-generated and
rendered in the page. Like so:

.. GENERATED FROM PYTHON SOURCE LINES 79-82

.. code-block:: default

    display = Graphics(model)
    display()




.. image-sg:: /examples/gallery_examples/misc/images/sphx_glr_example_template_001.png
   :alt: example template
   :srcset: /examples/gallery_examples/misc/images/sphx_glr_example_template_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 83-91

Making a Pull Request
~~~~~~~~~~~~~~~~~~~~~
Once your example is complete and you've verified builds locally, you can make a
pull request (PR).  Branches containing examples should be prefixed with `doc/`
as per the branch naming conventions found here: :ref:`contributing`.

Note that you only need to create the python source example (.py).  The jupyter
notebook, the example html and the demo script will all be auto-generated via ``sphinx-gallery``.

.. GENERATED FROM PYTHON SOURCE LINES 93-96

Stopping Ansys Prime Server
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 96-97

.. code-block:: default

    prime_client.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  17.082 seconds)


.. _sphx_glr_download_examples_gallery_examples_misc_example_template.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: example_template.py <example_template.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: example_template.ipynb <example_template.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
